--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "author": "sqrtofsaturn <sqrtofsaturn@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "dashdash": "^1.14.1",
+    "lodash": "^4.17.4",
     "node-hid": "^0.5.7",
+    "octodash": "^2.0.0",
+    "thin-red-line": "^1.0.0",
     "ws": "^3.1.0"
   }
 }
